# daemonize

./: CMakeLists.txt  CPackOptions.cmake.in  README  config.h.in
comp_specs/: name
demos/: CMakeLists.txt  hello_daemonize.c
include/daemonize/: daemonize.h
src/: CMakeLists.txt  daemonize.c
u2up/: build  name  packages
